# webMethodsDocs

./: Q&A.md  README.md  desktop.ini  index.html  menu.html  top.html
MWS/: index.html  my-webmethods-server-webhelp.html  my-webmethods-server-webhelp_ix.html  my-webmethods-server-webhelp_sx.js
webMethodsAPIGateway/: index.html  yai-webhelp.html  yai-webhelp_ix.html  yai-webhelp_sx.js
webMethodsAPIPortal/: api-portal-integrated-webhelp.html  api-portal-integrated-webhelp_ix.html  api-portal-integrated-webhelp_sx.js  index.html
webMethodsAdapterforMongoDB/: index.html  mongodb-webhelp.html  mongodb-webhelp_ix.html  mongodb-webhelp_sx.js
webMethodsApacheKafka/: index.html  kafka-webhelp.html  kafka-webhelp_ix.html  kafka-webhelp_sx.js
webMethodsCloudStreamsServer/: index.html  wst-webhelp.html  wst-webhelp_ix.html  wst-webhelp_sx.js
webMethodsEDI/: eeo-webhelp.html  eeo-webhelp_ix.html  eeo-webhelp_sx.js  index.html
webMethodsIntegrationServer/: index.html  integration-server-integrated-webhelp.html  integration-server-integrated-webhelp_ix.html
webMethodsJDBC/: index.html  jdbc-webhelp.html  jdbc-webhelp_ix.html  jdbc-webhelp_sx.js
webMethodsJMS/: index.html  jms-webhelp.html  jms-webhelp_ix.html  jms-webhelp_sx.js
webMethodsJavaServices/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  (+9 more)
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/: CMakeLists.txt  README.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/RegisteredEvent/: CMakeLists.txt  RegisteredEvent.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/broadcaster/: BroadcastMessage.cpp.txt  BroadcastMessage.h  CMakeLists.txt  SynchronousBroadcasterClient.cpp.txt  SynchronousBroadcasterClient.h  SynchronousServer.cpp.txt  SynchronousServer.h  main.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/channeliterator/: CMakeLists.txt  channeliterator.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/deletechan/: CMakeLists.txt  deletechan.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/deletechanneljoin/: CMakeLists.txt  deletechanneljoin.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/deletequeue/: CMakeLists.txt  deletequeue.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/deletequeuejoin/: CMakeLists.txt  deletequeuejoin.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/echo/: CMakeLists.txt  EchoClient.cpp.txt  EchoClient.h  EchoServer.cpp.txt  EchoServer.h  SimpleMessage.cpp.txt  SimpleMessage.h  main.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/exampleBase/: CMakeLists.txt  Message.h  SynchronousClient.h  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/examples/: CMakeLists.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/findChannelsAndQueues/: CMakeLists.txt  findChannelsAndQueues.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/getServerTime/: CMakeLists.txt  getServerTime.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/latency/: CMakeLists.txt  PingClient.cpp.txt  PingClient.h  PingServer.cpp.txt  PingServer.h  main.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/makechan/: CMakeLists.txt  makechan.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/makechanneljoin/: CMakeLists.txt  makechanneljoin.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/makequeue/: CMakeLists.txt  makequeue.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/makequeuejoin/: CMakeLists.txt  makequeuejoin.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/nSampleApp/: AssemblyInfo.cpp.txt  nSampleApp.cpp.txt  nSampleApp.h
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/namedchanneliterator/: CMakeLists.txt  namedchanneliterator.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/namedsubscriber/: CMakeLists.txt  namedsubscriber.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/publish/: CMakeLists.txt  publish.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/purgechan/: CMakeLists.txt  purgechan.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/pushq/: CMakeLists.txt  pushq.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/qpeek/: CMakeLists.txt  qpeek.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/qreader/: CMakeLists.txt  qreader.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/qsubscriber/: CMakeLists.txt  qsubscriber.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/sessionSubscriber/: CMakeLists.txt  sessionSubscriber.cpp.txt  sourceList.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/subscriber/: CMakeLists.txt  sourceList.txt  subscriber.cpp.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/txpublish/: CMakeLists.txt  sourceList.txt  txpublish.cpp.txt
webMethodsUniversalMessaging/num-webhelp/Examples/cpp/txpushq/: CMakeLists.txt  sourceList.txt  txpushq.cpp.txt
(+28855 files in other folders)
