cmake_minimum_required(VERSION 2.6)
add_subdirectory( examples )
add_subdirectory( RegisteredEvent )
add_subdirectory( broadcaster )
add_subdirectory( channeliterator )
add_subdirectory( deletechan )
add_subdirectory( deletechanneljoin )
add_subdirectory( deletequeue )
add_subdirectory( deletequeuejoin )
add_subdirectory( echo )
add_subdirectory( exampleBase )
add_subdirectory( findChannelsAndQueues )
add_subdirectory( getServerTime )
add_subdirectory( latency )
add_subdirectory( makechan )
add_subdirectory( makechanneljoin )
add_subdirectory( makequeue )
add_subdirectory( makequeuejoin )
add_subdirectory( namedchanneliterator )
add_subdirectory( namedsubscriber )
add_subdirectory( publish )
add_subdirectory( purgechan )
add_subdirectory( pushq )
add_subdirectory( qpeek )
add_subdirectory( qreader )
add_subdirectory( qsubscriber )
add_subdirectory( sessionSubscriber )
add_subdirectory( subscriber )
add_subdirectory( txpublish )
add_subdirectory( txpushq )
